fixed footer spacing

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -12,7 +12,7 @@ footer {
     margin: 1px;
     height: 20rem;
     overflow: hidden;
-    padding: 10px;
+    padding: 00px;
   }
   .panel-title {
     font: 20px;
